some meta tag for seo is added, about page in front page is added

--- a/index.html
+++ b/index.html
@@ -6,28 +6,36 @@
 <html>
 
 <head>
-  <!-- SEO stuff start -->
 
   <!-- Google search console verification code -->
   <meta name="google-site-verification" content="ai5aUChfaelG0VIE8Lb4H9iocFdcjDU9IxZLRHbo-u8" />
 
-  <meta charset="utf-8">
+  <!-- adsense code start -->
+  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6755330354272694"
+    crossorigin="anonymous"></script>
+  
+  <!-- adsense code end -->
+
+
+  <!-- SEO stuff start -->
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <meta name="description" content="This is a website for STL sheet.">
-  <meta name="keywords" content="STL, C++, Data Structure, BinaryMagic, STL sheet">
-  <meta name="author" content="BinaryMagic">
+  <meta name="title" content="STL Sheet - Practice coding questions of C++ STL here, free">
+  <meta name="description"
+    content="STL sheet is best place to learn C++ STL concept and practice question over all container and different algorithm.">
+  <meta name="keywords" content="stl,c++,progammming question,stl sheet,stl container, binarymagic">
+  <meta name="robots" content="index,follow">
+  <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+  <meta name="language" content="English">
+  <meta name="author" content="binarymagic (pankaj kumar)">
+
+  <link rel="canonical" href="https://binarymagic.in/">
 
   <!-- SEO stuff end -->
 
-  <!-- adsense code start -->
-
-  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6755330354272694"
-    crossorigin="anonymous"></script>
-
-  <!-- adsense code end -->
-
   <!-- Title stuff -->
-  <title>STL Sheet by Binary Magic (Pankaj Kumar) </title>
+  <title>STL Sheet - Practice coding questions of C++ STL here, free</title>
+
   <link rel="icon" href="image/BinaryMagic-circle.png" type="image/x-icon">
 
   <!-- cdn link -->
@@ -100,7 +108,29 @@
       </div>
     </div>
 
-    <!-- about STL -->
+    <!-- about STL  page -->
+    <div class="about-stl-page">
+      <div>
+        <h2>About this page</h2>
+        <p>
+          ✨ Welcome to our comprehensive guide to C++ STL containers! This page is a treasure trove of information for all those who
+          want to dive deep into the world of STL containers. Here, you will find a plethora of questions and answers on various
+          STL containers such as vectors, maps, sets, queues, and more!
+        </p>
+
+        <p>
+          ✨ We know that sometimes just reading about a concept is not enough, which is why we have included video solutions for
+          each question. These videos are specially designed to help you understand the concept visually and in a more engaging
+          way. So, not only will you learn about the concepts, but you will also be able to see how they are implemented in
+          practice.
+        </p>
+
+        <p>
+          ✨ Whether you are a beginner or an experienced programmer, our page has something for everyone. So, come and explore the
+          world of STL containers with us and take your programming skills to the next level!
+        </p>
+      </div>
+    </div>
 
     <div class="container">
 
