--- a/map.html
+++ b/map.html
@@ -7,17 +7,22 @@
 
 <head>
     <!-- SEO stuff start -->
-
-    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="This is a website for STL sheet.">
-    <meta name="keywords" content="STL, C++, Data Structure, BinaryMagic, STL sheet">
-    <meta name="author" content="BinaryMagic">
-
+    <meta name="title" content="STL Sheet | map Container - practice coding questions of C++ array container here, free">
+    <meta name="description"
+        content="Check out some of the best programming questions you should practice to get better at STL map container">
+    <meta name="keywords" content="stl,c++,progammming question,stl sheet,stl container, binarymagic, map">
+    <meta name="robots" content="index,follow">
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
+    <meta name="language" content="English">
+    <meta name="author" content="binarymagic (pankaj kumar)">
+    
+    <link rel="canonical" href="https://binarymagic.in/map.html">
     <!-- SEO stuff end -->
-
+    
     <!-- Title stuff -->
-    <title>Map Container | STL Sheet by Binary Magic (Pankaj Kumar) </title>
+    <title>STL Sheet | map Container - practice coding questions of C++ map container here, free</title>
+
     <link rel="icon" href="image/BinaryMagic-circle.png" type="image/x-icon">
 
     <!-- cdn link -->
@@ -87,7 +92,7 @@
 
         <div class="page-title-div">
             <div class="container">
-                <h1 class="text-center">Map Question List</h1>
+                <h1 class="text-center">Map questions</h1>
             </div>
         </div>
 
