created a header component and used in all file

--- a/priority_queue.html
+++ b/priority_queue.html
@@ -33,6 +33,7 @@
 
     <link rel="stylesheet" href="css/style.css">
     <script src="js/generateTableRow.js"></script>
+    <script src="./js/components/headerComponent.js"></script>
 
     <style>
 
@@ -42,42 +43,7 @@
 <body>
     <!-- Header Start -->
 
-    <div class="header">
-        <nav class="navbar navbar-light navbar-expand-md">
-            <div class="container">
-                <a href="index.html" class="navbar-brand">
-                    <img src="image/BinaryMagic-circle.png" alt="logo" style="width:40px;">
-                </a>
-
-                <!-- Add a button to toggle the collapsible menu -->
-                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#collapsible-menu">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-
-                <!-- Add the collapsible menu -->
-                <div class="collapse navbar-collapse" id="collapsible-menu">
-                    <ul class="nav ml-auto">
-                        <li class="nav-item">
-                            <a href="https://www.youtube.com/@binmagic" class="nav-link active" target="_blank">YouTube
-                                Channel</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="https://www.linkedin.com/in/pankajcoder1/" class="nav-link"
-                                target="_blank">LinkedIn</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="https://github.com/Pankajcoder1" class="nav-link" target="_blank">Github</a>
-                        </li>
-                        <li class="nav-item">
-                            <a href="https://discord.com/invite/GMSxHE2fgk" class="nav-link" target="_blank">Join
-                                Discord</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-
-
+    <div id="header">
     </div>
 
     <!-- Header End -->
@@ -234,6 +200,11 @@
         </div>
     </footer>
     <!-- footer section end -->
+
+    <script>
+        const header = document.getElementById("header");
+        header.appendChild(headerComponents());
+    </script>
 
     <script>
         // Define an array of objects with the question and video data
