added social pages section

--- a/index.html
+++ b/index.html
@@ -271,14 +271,60 @@
   <!-- grid of container end -->
   </div>
 
+  <!-- reach out to me section start -->
+  <section class="reach-out-to-me" id="reach-out-to-me">
+    <div class="container">
+      <div class="text-center">
+        <p class="section-heading">
+          💬 Social Pages
+        </p>
+      </div>
+      <div class="reach-out-to-me-inner-div">
+        <ul class="col text-center">
+
+          <li class="youtube_channel">
+            <a href="https://www.youtube.com/channel/UCSVfA_mo9u3_eglngWNpCWg" title="YouTube Channel" target="_blank">
+              <i class="fa fa-youtube-play"></i>
+            </a>
+          </li>
+
+          <li class="linkedin_page">
+            <a href="https://www.linkedin.com/company/binarymagic/" title="Linkedin page" target="_blank">
+              <i class="fa fa-linkedin"></i>
+            </a>
+          </li>
+  
+          <li class="email">
+            <a href="mailto:admin@binarymagic.in" title="any feedback ?" target="_blank">
+              <i class="fa fa-envelope"></i>
+            </a>
+          </li>
+  
+          <li class="discord_account">
+            <a href="https://discord.gg/GMSxHE2fgk" title="Discord server" target="_blank">
+              <img src="image/discord logo.png"/>
+            </a>
+          </li>
+
+        </ul>
+      </div>
+    </div>
+  </section>
+  <!-- reach out to me section end -->
+
   
   <!-- footer section start -->
   <footer class="footer">
     <div class="container-fluid text-center">
-      <p>
-        &copy;All rights reserved | Made with <i class="fa fa-heart" style="color: red;"></i> by <a
+      <div class="row">
+        <p class="col">
+          &copy;All rights reserved | Made with <i class="fa fa-heart" style="color: red;"></i> by <a
           href="https://github.com/Pankajcoder1"> Pankaj Kumar</a>
-      </p>
+        </p>
+
+        <p class="col">For any query contact us at <i>admin@binarymagic.in</i></p>
+      </div>
+      
     </div>
   </footer>
   <!-- footer section end -->
