--- a/index.html
+++ b/index.html
@@ -283,7 +283,7 @@
         <ul class="col text-center">
 
           <li class="youtube_channel">
-            <a href="https://www.youtube.com/channel/UCSVfA_mo9u3_eglngWNpCWg" title="YouTube Channel" target="_blank">
+            <a href="https://www.youtube.com/@binmagic?sub_confirmation=1" title="YouTube Channel" target="_blank">
               <i class="fa fa-youtube-play"></i>
             </a>
           </li>
