--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
   <meta name="google-site-verification" content="ai5aUChfaelG0VIE8Lb4H9iocFdcjDU9IxZLRHbo-u8" />
 
   <!-- adsense code start -->
-  
+
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-6755330354272694"
     crossorigin="anonymous"></script>
-  
+
   <!-- adsense code end -->
 
 
@@ -53,6 +53,7 @@
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/main.css">
   <script src="./js/components/headerComponent.js"></script>
+  <script src="./js/components/learnMoreCardComponent.js"></script>
 
 </head>
 
@@ -72,7 +73,7 @@
     <!-- Page Heading Start -->
 
     <div class="page-title-div">
-      <div class="container">
+      <div class="">
         <h1 class="text-center sheet-name">STL Sheet</h1>
       </div>
     </div>
@@ -82,34 +83,38 @@
       <div>
         <h2>About this page</h2>
         <p>
-          ✨ Welcome to our comprehensive guide to C++ STL containers! This page is a treasure trove of information for all those who
-          want to dive deep into the world of STL containers. Here, you will find a plethora of questions and answers on various
+          ✨ Welcome to our comprehensive guide to C++ STL containers! This page is a treasure trove of information for
+          all those who
+          want to dive deep into the world of STL containers. Here, you will find a plethora of questions and answers on
+          various
           STL containers such as vectors, maps, sets, queues, and more!
         </p>
 
         <p>
-          ✨ We know that sometimes just reading about a concept is not enough, which is why we have included video solutions for
-          each question. These videos are specially designed to help you understand the concept visually and in a more engaging
-          way. So, not only will you learn about the concepts, but you will also be able to see how they are implemented in
+          ✨ We know that sometimes just reading about a concept is not enough, which is why we have included video
+          solutions for
+          each question. These videos are specially designed to help you understand the concept visually and in a more
+          engaging
+          way. So, not only will you learn about the concepts, but you will also be able to see how they are implemented
+          in
           practice.
         </p>
 
         <p>
-          ✨ Whether you are a beginner or an experienced programmer, our page has something for everyone. So, come and explore the
+          ✨ Whether you are a beginner or an experienced programmer, our page has something for everyone. So, come and
+          explore the
           world of STL containers with us and take your programming skills to the next level!
         </p>
       </div>
     </div>
 
-    <div class="container">
-
+    <div class="">
       <div class="row">
 
         <div class="col-md">
           <h3>Common doubt in STL 👇</h3>
           <ol class="modern-list">
             <li>
-
               <div class="modern-list-item">
                 <a class="modern-list-item-name" data-toggle="collapse" href="#firstQuestion" role="button"
                   aria-controls="firstQuestion">
@@ -144,7 +149,8 @@
                   Why should choose STL ? <i class="fa fa-caret-down" aria-hidden="true"></i>
                 </a>
                 <div class="modern-list-item-description collapse" id="thirdQuestion">
-                  By using this library, you can save time in writing code, <b>gain best time and space complexity</b>, finish work in
+                  By using this library, you can save time in writing code, <b>gain best time and space complexity</b>,
+                  finish work in
                   very little line of code. It is mainly known for its <b>versatility, efficiency, and ease of use</b>.
                 </div>
               </div>
@@ -160,116 +166,152 @@
           </div>
         </div>
       </div>
-
       <hr>
+    </div>
+  </div>
 
+  <section class="container">
+    <div class="">
       <div>
         <h3>Practice question on each container</h3>
       </div>
+
+      <!-- grid of container start -->
+      <div class="" style="margin-top: 5px; padding-top: 10px;">
+        <div class="container">
+          <div class="row hidden-md-up justify-content-center">
+
+            <!-- grid cell -->
+            <div class="col-auto mb-3">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="image/array.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3>Array</h3>
+                  <p class="card-text">
+                    This container provide you facility to <b class="important-point">create N-Dimensional array
+                      quicky</b> and provide ease in
+                    many operation like accessing, value assignment and other.
+                  </p>
+                  <a class="btn" href="array.html">Practice Question <i class="fa fa-arrow-right"
+                      aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <!-- grid cell -->
+            <div class="col-auto mb-3">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="image/deque.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3>Deque</h3>
+                  <p class="card-text">
+                    This container is simply <b class="important-point">implementation of Double ended queue</b>, which
+                    provide you <b class="important-point">push and
+                      pop operation from both side</b>.
+                  </p>
+                  <a class="btn" href="deque.html">Practice Question <i class="fa fa-arrow-right"
+                      aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <!-- grid cell -->
+            <div class="col-auto mb-3">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="image/list.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3>List</h3>
+                  <p class="card-text">
+                    list and forward list is <b class="important-point">implementation of singly and doubly linked list
+                    </b> data structure.
+                  </p>
+                  <a class="btn" href="list.html">Practice Question <i class="fa fa-arrow-right"
+                      aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+
+
+            <div class="col-auto mb-3">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="image/stack.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3>Stack</h3>
+                  <p class="card-text">
+                    Stack is a <b class="important-point">data structure which allow LIFO (last in first out)
+                      operation</b>.
+                    STL stack is just implementation of it, which allow to do all possible operation with best time
+                    complexity.
+                  </p>
+                  <a class="btn" href="stack.html">Practice Question <i class="fa fa-arrow-right"
+                      aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-auto mb-3">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="image/queue.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3>Queue</h3>
+                  <p class="card-text">
+                    Queue is a <b class="important-point">data structure which allow FIFO (first in first out)
+                      operation</b>.
+                    STL queue is just
+                    implementation of it, which allow to do all possible operation with best time complexity.
+                  </p>
+                  <a class="btn" href="queue.html">Practice Question <i class="fa fa-arrow-right"
+                      aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-auto mb-3">
+              <div class="card" style="width: 18rem;">
+                <img class="card-img-top" src="image/priority_queue.png" alt="Card image cap">
+                <div class="card-body">
+                  <h3>Priority Queue</h3>
+                  <p class="card-text">
+                    Priority Queue balance element according to priority. It is just <b
+                      class="important-point">implementation
+                      of heap data structure</b>. You can use <b class="important-point">min or max heap with help of
+                      this
+                      container</b> in just a line of code.
+                  </p>
+                  <a class="btn" href="priority_queue.html">Practice Question <i class="fa fa-arrow-right"
+                      aria-hidden="true"></i></a>
+                </div>
+              </div>
+            </div>
+
+          </div>
+        </div>
+      </div>
+
+      <hr>
+
+      <!-- grid of container end -->
     </div>
+  </section>
 
-    <!-- grid of container start -->
-    <div class="" style="margin-top: 5px; padding-top: 10px;">
-      <div class="container">
-        <div class="row hidden-md-up justify-content-center">
+  <section class="learn-more-from-us">
+    <div class="container">
+      <div>
+        <h3>🔥 Learn more from us</h3>
+      </div>
 
-          <!-- grid cell -->
-          <div class="col-auto mb-3">
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="image/array.png" alt="Card image cap">
-              <div class="card-body">
-                <h3>Array</h3>
-                <p class="card-text">
-                  This container provide you facility to <b class="important-point">create N-Dimensional array
-                    quicky</b> and provide ease in
-                  many operation like accessing, value assignment and other.
-                </p>
-                <a class="btn" href="array.html">Practice Question <i class="fa fa-arrow-right"
-                    aria-hidden="true"></i></a>
-              </div>
-            </div>
-          </div>
+      <div class="" style="margin-top: 5px; padding-top: 10px;">
+        <div class="container">
+          <div class="row hidden-md-up justify-content-center" id="playlist-container">
 
-          <!-- grid cell -->
-          <div class="col-auto mb-3">
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="image/deque.png" alt="Card image cap">
-              <div class="card-body">
-                <h3>Deque</h3>
-                <p class="card-text">
-                  This container is simply <b class="important-point">implementation of Double ended queue</b>, which
-                  provide you <b class="important-point">push and
-                    pop operation from both side</b>.
-                </p>
-                <a class="btn" href="deque.html">Practice Question <i class="fa fa-arrow-right"
-                    aria-hidden="true"></i></a>
-              </div>
-            </div>
-          </div>
-
-          <!-- grid cell -->
-          <div class="col-auto mb-3">
-            <div class="card" style="width: 18rem;">
-              <img class="card-img-top" src="image/list.png" alt="Card image cap">
-              <div class="card-body">
-                <h3>List</h3>
-                <p class="card-text">
-                  list and forward list is <b class="important-point">implementation of singly and doubly linked list
-                  </b> data structure.
-                </p>
-                <a class="btn" href="list.html">Practice Question <i class="fa fa-arrow-right"
-                    aria-hidden="true"></i></a>
-              </div>
-            </div>
-          </div>
-
-
-          <div class="col-auto mb-3">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="image/stack.png" alt="Card image cap">
-            <div class="card-body">
-              <h3>Stack</h3>
-              <p class="card-text">
-                Stack is a <b class="important-point">data structure which allow LIFO (last in first out) operation</b>. STL stack is just implementation of it, which allow to do all possible operation with best time complexity.
-              </p>
-              <a class="btn" href="stack.html">Practice Question <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-            </div>
+            <!-- grid cell -->
+            <!-- card will get automatically added via js here -->
           </div>
         </div>
-
-        <div class="col-auto mb-3">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="image/queue.png" alt="Card image cap">
-            <div class="card-body">
-              <h3>Queue</h3>
-              <p class="card-text">
-                Queue is a <b class="important-point">data structure which allow FIFO (first in first out) operation</b>. STL queue is just
-                implementation of it, which allow to do all possible operation with best time complexity.
-              </p>
-              <a class="btn" href="queue.html">Practice Question <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-            </div>
-          </div>
-        </div>
-
-        <div class="col-auto mb-3">
-          <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="image/priority_queue.png" alt="Card image cap">
-            <div class="card-body">
-              <h3>Priority Queue</h3>
-              <p class="card-text">
-                Priority Queue balance element according to priority. It is just <b class="important-point">implementation of heap data structure</b>. You can use <b class="important-point">min or max heap with help of this container</b> in just a line of code.
-              </p>
-              <a class="btn" href="priority_queue.html">Practice Question <i class="fa fa-arrow-right" aria-hidden="true"></i></a>
-            </div>
-          </div>
-        </div>
-
       </div>
     </div>
-  </div>
 
-  <!-- grid of container end -->
-  </div>
+  </section>
 
   <!-- reach out to me section start -->
   <section class="reach-out-to-me" id="reach-out-to-me">
@@ -293,16 +335,16 @@
               <i class="fa fa-linkedin"></i>
             </a>
           </li>
-  
+
           <li class="email">
             <a href="mailto:admin@binarymagic.in" title="any feedback ?" target="_blank">
               <i class="fa fa-envelope"></i>
             </a>
           </li>
-  
+
           <li class="discord_account">
             <a href="https://discord.gg/GMSxHE2fgk" title="Discord server" target="_blank">
-              <img src="image/discord logo.png"/>
+              <img src="image/discord logo.png" />
             </a>
           </li>
 
@@ -312,19 +354,19 @@
   </section>
   <!-- reach out to me section end -->
 
-  
+
   <!-- footer section start -->
   <footer class="footer">
     <div class="container-fluid text-center">
       <div class="row">
         <p class="col">
           &copy;All rights reserved | Made with <i class="fa fa-heart" style="color: red;"></i> by <a
-          href="https://github.com/Pankajcoder1"> Pankaj Kumar</a>
+            href="https://github.com/Pankajcoder1"> Pankaj Kumar</a>
         </p>
 
         <p class="col">For any query contact us at <i>admin@binarymagic.in</i></p>
       </div>
-      
+
     </div>
   </footer>
   <!-- footer section end -->
@@ -334,6 +376,10 @@
     header.appendChild(headerComponents());
   </script>
 
-</body>
+  <script>
+    const playlistContainer = document.getElementById('playlist-container');
+    playlistContainer.appendChild(createPlaylist());
+  </script>
 
+</body>
 </html>
