logo finlename renamed

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
   <!-- Title stuff -->
   <title>STL Sheet - Practice coding questions of C++ STL here, free</title>
 
-  <link rel="icon" href="image/BinaryMagic-circle.png" type="image/x-icon">
+  <link rel="icon" href="image/BinaryMagic-logo.png" type="image/x-icon">
 
   <!-- cdn link -->
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
@@ -268,7 +268,7 @@
 
             <div class="col-auto mb-3">
               <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="image/priority_queue.png" alt="Card image cap">
+                <img class="card-img-top" src="image/priorityQueue.png" alt="Card image cap">
                 <div class="card-body">
                   <h3>Priority Queue</h3>
                   <p class="card-text">
@@ -310,7 +310,6 @@
         </div>
       </div>
     </div>
-
   </section>
 
   <!-- reach out to me section start -->
