--- a/queue.html
+++ b/queue.html
@@ -26,7 +26,7 @@
     <title>STL Sheet | queue Container - practice coding questions of C++ queue container here, free</title>
 
 
-    <link rel="icon" href="image/BinaryMagic-circle.png" type="image/x-icon">
+    <link rel="icon" href="image/BinaryMagic-logo.png" type="image/x-icon">
 
     <!-- cdn link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
