--- a/deque.html
+++ b/deque.html
@@ -25,7 +25,7 @@
     <title>STL Sheet | deque Container - practice coding questions of C++ deque container here, free</title>
 
     
-    <link rel="icon" href="image/BinaryMagic-circle.png" type="image/x-icon">
+    <link rel="icon" href="image/BinaryMagic-logo.png" type="image/x-icon">
 
     <!-- cdn link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
