--- a/map.html
+++ b/map.html
@@ -23,7 +23,7 @@
     <!-- Title stuff -->
     <title>STL Sheet | map Container - practice coding questions of C++ map container here, free</title>
 
-    <link rel="icon" href="image/BinaryMagic-circle.png" type="image/x-icon">
+    <link rel="icon" href="image/BinaryMagic-logo.png" type="image/x-icon">
 
     <!-- cdn link -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
