priority queue image correction

--- a/index.html
+++ b/index.html
@@ -278,7 +278,7 @@
                       this
                       container</b> in just a line of code.
                   </p>
-                  <a class="btn" href="priority_queue.html">Practice Question <i class="fa fa-arrow-right"
+                  <a class="btn" href="priorityQueue.html">Practice Question <i class="fa fa-arrow-right"
                       aria-hidden="true"></i></a>
                 </div>
               </div>
