--- a/deque.html
+++ b/deque.html
@@ -59,7 +59,7 @@
 
         <div class="page-title-div">
             <div class="container">
-                <h1 class="text-center">Deque questions</h1>
+                <h1 class="text-center">Deque Questions</h1>
             </div>
         </div>
 
