add blog button in header

--- a/priorityQueue.html
+++ b/priorityQueue.html
@@ -57,7 +57,7 @@
 
         <div class="page-title-div">
             <div class="container">
-                <h1 class="text-center">Priority Queue questions</h1>
+                <h1 class="text-center">Priority Queue Questions</h1>
             </div>
         </div>
 
