--- a/queue.html
+++ b/queue.html
@@ -58,7 +58,7 @@
 
         <div class="page-title-div">
             <div class="container">
-                <h1 class="text-center">Queue questions</h1>
+                <h1 class="text-center">Queue Questions</h1>
             </div>
         </div>
 
