--- a/stack.html
+++ b/stack.html
@@ -55,7 +55,7 @@
 
         <div class="page-title-div">
             <div class="container">
-                <h1 class="text-center">Stack questions</h1>
+                <h1 class="text-center">Stack Questions</h1>
             </div>
         </div>
 
