--- a/array.html
+++ b/array.html
@@ -59,7 +59,7 @@
 
         <div class="page-title-div">
             <div class="container">
-                <h1 class="text-center">Array questions</h1>
+                <h1 class="text-center">Array Questions</h1>
             </div>
         </div>
 
