--- a/list.html
+++ b/list.html
@@ -59,7 +59,7 @@
 
         <div class="page-title-div">
             <div class="container">
-                <h1 class="text-center">List questions</h1>
+                <h1 class="text-center">List Questions</h1>
             </div>
         </div>
 
