--- a/map.html
+++ b/map.html
@@ -58,7 +58,7 @@
 
         <div class="page-title-div">
             <div class="container">
-                <h1 class="text-center">Map questions</h1>
+                <h1 class="text-center">Map Questions</h1>
             </div>
         </div>
 
